test_data/unit/stack/test_app_vpc/test_app_vpc_stack_custom/explore_new_setting/expected.json
{
  "Resources": {
    "NevergreenDevAppVpcAppVpc38674E87": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.37.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ]
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1SubnetD9969013": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-dev-app-vpc_public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_publicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1RouteTable6CCADF0F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_publicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1RouteTableAssociationE2A3E344": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1RouteTable6CCADF0F"
        },
        "SubnetId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1SubnetD9969013"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1DefaultRoute8ABC9C6E": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NevergreenDevAppVpcAppVpcIGW6F7CA20D"
        },
        "RouteTableId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1RouteTable6CCADF0F"
        }
      },
      "DependsOn": [
        "NevergreenDevAppVpcAppVpcVPCGWE9C4669D"
      ]
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1EIPA7954A00": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_publicSubnet1"
          }
        ]
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1NATGateway30CCE784": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1EIPA7954A00",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1SubnetD9969013"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_publicSubnet1"
          }
        ]
      },
      "DependsOn": [
        "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1DefaultRoute8ABC9C6E",
        "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1RouteTableAssociationE2A3E344"
      ]
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2SubnetE550CBBD": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-dev-app-vpc_public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_publicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2RouteTable5ABB53A3": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_publicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2RouteTableAssociation49BE0A80": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2RouteTable5ABB53A3"
        },
        "SubnetId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2SubnetE550CBBD"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2DefaultRoute5C72861F": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NevergreenDevAppVpcAppVpcIGW6F7CA20D"
        },
        "RouteTableId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2RouteTable5ABB53A3"
        }
      },
      "DependsOn": [
        "NevergreenDevAppVpcAppVpcVPCGWE9C4669D"
      ]
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2EIPB63506A8": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_publicSubnet2"
          }
        ]
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2NATGateway5468A50D": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2EIPB63506A8",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2SubnetE550CBBD"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_publicSubnet2"
          }
        ]
      },
      "DependsOn": [
        "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2DefaultRoute5C72861F",
        "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2RouteTableAssociation49BE0A80"
      ]
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1Subnet1E63E6B6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-dev-app-vpc_private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_privateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1RouteTable2E6FA6C3": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_privateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1RouteTableAssociationC990564A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1RouteTable2E6FA6C3"
        },
        "SubnetId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1Subnet1E63E6B6"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1DefaultRoute12F56489": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1NATGateway30CCE784"
        },
        "RouteTableId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1RouteTable2E6FA6C3"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2Subnet4C3E229B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-dev-app-vpc_private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_privateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2RouteTableA4DE44A2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_privateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2RouteTableAssociation951546C6": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2RouteTableA4DE44A2"
        },
        "SubnetId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2Subnet4C3E229B"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2DefaultRoute3A1CEC43": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2NATGateway5468A50D"
        },
        "RouteTableId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2RouteTableA4DE44A2"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet1SubnetA34A2FD8": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.128.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-dev-app-vpc_isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_isolatedSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet1RouteTable27A3152E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_isolatedSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet1RouteTableAssociationBE4B92A1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet1RouteTable27A3152E"
        },
        "SubnetId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet1SubnetA34A2FD8"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet2Subnet78162CC8": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.37.160.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-dev-app-vpc_isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_isolatedSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet2RouteTableDC56A4A9": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/nevergreen-dev-app-vpc_isolatedSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet2RouteTableAssociation2175797A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet2RouteTableDC56A4A9"
        },
        "SubnetId": {
          "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet2Subnet78162CC8"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcIGW6F7CA20D": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ]
      }
    },
    "NevergreenDevAppVpcAppVpcVPCGWE9C4669D": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "NevergreenDevAppVpcAppVpcIGW6F7CA20D"
        },
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcEC2SecurityGroup634CBEFB": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/EC2/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenDevAppVpcAppVpc38674E87",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenDevAppVpcAppVpc38674E87",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcEC23C75A25F": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenDevAppVpcAppVpcEC2SecurityGroup634CBEFB",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1Subnet1E63E6B6"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2Subnet4C3E229B"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcEC2MESSAGESSecurityGroup38C6AE3F": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/EC2_MESSAGES/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenDevAppVpcAppVpc38674E87",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenDevAppVpcAppVpc38674E87",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcEC2MESSAGES7B4CDEE7": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenDevAppVpcAppVpcEC2MESSAGESSecurityGroup38C6AE3F",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2messages"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1Subnet1E63E6B6"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2Subnet4C3E229B"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcSSMSecurityGroupD8C4437C": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/SSM/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenDevAppVpcAppVpc38674E87",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenDevAppVpcAppVpc38674E87",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcSSM39C007CB": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenDevAppVpcAppVpcSSMSecurityGroupD8C4437C",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssm"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1Subnet1E63E6B6"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2Subnet4C3E229B"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcSSMMESSAGESSecurityGroup5D9C0FAF": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/SSM_MESSAGES/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenDevAppVpcAppVpc38674E87",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenDevAppVpcAppVpc38674E87",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcSSMMESSAGES0AD93DE0": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenDevAppVpcAppVpcSSMMESSAGESSecurityGroup5D9C0FAF",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssmmessages"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1Subnet1E63E6B6"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2Subnet4C3E229B"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcSECRETSMANAGERSecurityGroupF15D5C18": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/SECRETS_MANAGER/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenDevAppVpcAppVpc38674E87",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenDevAppVpcAppVpc38674E87",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcSECRETSMANAGER8E302628": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenDevAppVpcAppVpcSECRETSMANAGERSecurityGroupF15D5C18",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".secretsmanager"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1Subnet1E63E6B6"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2Subnet4C3E229B"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcECSAGENTSecurityGroup29B30692": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/ECS_AGENT/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenDevAppVpcAppVpc38674E87",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenDevAppVpcAppVpc38674E87",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcECSAGENTFADC5B02": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenDevAppVpcAppVpcECSAGENTSecurityGroup29B30692",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-agent"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1Subnet1E63E6B6"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2Subnet4C3E229B"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcECSSecurityGroupC24B4C4C": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/ECS/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenDevAppVpcAppVpc38674E87",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenDevAppVpcAppVpc38674E87",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcECS1D0F248D": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenDevAppVpcAppVpcECSSecurityGroupC24B4C4C",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1Subnet1E63E6B6"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2Subnet4C3E229B"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcECSTELEMETRYSecurityGroup250E4F6D": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenDevAppVpcStack/NevergreenDevAppVpcAppVpc/ECS_TELEMETRY/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenDevAppVpcAppVpc38674E87",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenDevAppVpcAppVpc38674E87",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcECSTELEMETRY85E256DC": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenDevAppVpcAppVpcECSTELEMETRYSecurityGroup250E4F6D",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-telemetry"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1Subnet1E63E6B6"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2Subnet4C3E229B"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcAppVpcS376B8115E": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet1RouteTable2E6FA6C3"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcprivateSubnet2RouteTableA4DE44A2"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet1RouteTable6CCADF0F"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcpublicSubnet2RouteTable5ABB53A3"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet1RouteTable27A3152E"
          },
          {
            "Ref": "NevergreenDevAppVpcAppVpcnevergreendevappvpcisolatedSubnet2RouteTableDC56A4A9"
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-dev-app-vpc"
          }
        ],
        "VpcEndpointType": "Gateway",
        "VpcId": {
          "Ref": "NevergreenDevAppVpcAppVpc38674E87"
        }
      }
    },
    "NevergreenDevAppVpcPrivateR53ZoneF1947A6B": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "dev.internal.dev.daisy.com.",
        "VPCs": [
          {
            "VPCId": {
              "Ref": "NevergreenDevAppVpcAppVpc38674E87"
            },
            "VPCRegion": {
              "Ref": "AWS::Region"
            }
          }
        ]
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
